--- a/aplicacion/templates/aplicacion/inicio.html
+++ b/aplicacion/templates/aplicacion/inicio.html
@@ -1,17 +1,22 @@
 {% load static %}
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="{% static 'aplicacion/inicio.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'aplicacion/css/inicio.css' %}">
 <title>Extintores EL GENIO</title>
 </head>
 <body>
 
 <div>
 <h2>{{info}}</h2>
-<img src="{% static 'aplicacion/img/clientes.png' %}"/>
+    <img src="{% static 'aplicacion/img/extintor.png' %}"/>
+<a href="../admin/aplicacion/servicios" target="_blank">Servicios</a>
+<br/><br/>
+    <img src="{% static 'aplicacion/img/clientes.png' %}"/>
     <a href="clientes/listar">Clientes</a><br/><br/>
+
+    <p>----------------------------</p>
     <img src="{% static 'aplicacion/img/lock.png' %}"/>
-<a href="../admin/aplicacion" target="_blank">Admin</a>
+<a href="../admin/aplicacion" target="_blank">Administrar</a>
 </div>
 </body>
 </html>
