--- a/aplicacion/templates/aplicacion/inicio.html
+++ b/aplicacion/templates/aplicacion/inicio.html
@@ -9,10 +9,10 @@
 <div>
 <h2>{{info}}</h2>
     <img src="{% static 'aplicacion/img/extintor.png' %}"/>
-<a href="../admin/aplicacion/servicios" target="_blank">Servicios</a>
+<a href="servicios/" target="_blank">Servicios</a>
 <br/><br/>
     <img src="{% static 'aplicacion/img/clientes.png' %}"/>
-    <a href="clientes/listar">Clientes</a><br/><br/>
+    <a href="clientes/">Clientes</a><br/><br/>
 
     <p>----------------------------</p>
     <img src="{% static 'aplicacion/img/lock.png' %}"/>
