--- a/aplicacion/templates/aplicacion/inicio.html
+++ b/aplicacion/templates/aplicacion/inicio.html
@@ -9,7 +9,7 @@
 <div>
 <h2>{{info}}</h2>
     <img src="{% static 'aplicacion/img/extintor.png' %}"/>
-<a href="servicios/" target="_blank">Servicios</a>
+<a href="servicios/">Servicios</a>
 <br/><br/>
     <img src="{% static 'aplicacion/img/clientes.png' %}"/>
     <a href="clientes/">Clientes</a><br/><br/>
