--- a/aplicacion/templates/aplicacion/inicio.html
+++ b/aplicacion/templates/aplicacion/inicio.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load tz %}
+{% get_current_timezone as TIME_ZONE %}
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="{% static 'aplicacion/css/inicio.css' %}">
@@ -7,13 +9,9 @@
 <body>
 
 <div>
-<h2>{{info}}</h2>
-    <img src="{% static 'aplicacion/img/extintor.png' %}"/>
-<a href="servicios/">Servicios</a>
-<br/><br/>
-    <img src="{% static 'aplicacion/img/clientes.png' %}"/>
-    <a href="clientes/">Clientes</a><br/><br/>
 
+<h2><img src="{% static 'aplicacion/img/extintor.png' %}"/>{{info}}
+<img src="{% static 'aplicacion/img/extintor.png' %}"/></h2>
     <p>----------------------------</p>
     <img src="{% static 'aplicacion/img/lock.png' %}"/>
 <a href="../admin/aplicacion" target="_blank">Administrar</a>
